--- a/css/common.css
+++ b/css/common.css
@@ -3,17 +3,33 @@ html {
     overflow-x: hidden;
 }
 
+body {
+    position: relative;
+    min-height: 100%;
+    min-height: 100vh;
+}
+
 footer {
     background-color:rgb(25, 25, 25);
     position: absolute;
+    right: 0;
     bottom: -25%;
-    left: 0;
+    left: -1%;
 
-    width: 100%;
+    width: 120%;
     height: 25%;
 }
 
 footer >* {
     color: white;
     margin-left: 2%;
+}
+
+header {
+    background-image: linear-gradient(90deg, #fff, #fff, #999, #fff, #fff);
+    text-align: center;
+}
+
+article {
+    text-align: center;
 }
